--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
+# Local scripts & cron batchs
+*.bat
+*.sh
+
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
 
